# 5d

./: CMakeLists.txt  main.c
libs/algorithms/: CMakeLists.txt
libs/algorithms/compares/: compares.c  compares.h
libs/algorithms/heapFunctions/: heapFunctions.c  heapFunctions.h
libs/algorithms/oneDimArray/: oneDimArray.c  oneDimArray.h
libs/data_structures/matrix/: matrix.c  matrix.h
libs/data_structures/matrix/test/: testMatrix.c  testMatrix.h
tasks/: task1.c  task10.c  task11.c  task12.c  task13.c  task14.c  task15.c  task16.c  task17.c  task18.c  task2.c  task3.c  task4.c  task5.c  task6.c  task7.c  task8.c  task9.c
